refactor new issues